minor text overflow fix

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -142,6 +142,8 @@ body {
 
 #extra {
     line-height: 5px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #info {
